hydro_lang/tests/compile-fail/nightly/mut_singleton_map_no_order_at_least_once.stderr
error[E0594]: cannot assign to `*count_mut__free`, as it is a captured variable in a `Fn` closure
  --> tests/compile-fail/nightly/mut_singleton_map_no_order_at_least_once.rs:17:13
   |
 6 | fn test<'a>(p1: &Process<'a, P1>) {
   |    ----                          - change this to return `FnMut` instead of `Fn`
...
16 |         .map(q!(|x| {
   |                 --- in this closure
17 |             *count_mut += x;
   |             ^^^^^^^^^^^^^^^ cannot assign
